app/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    gitops.operator.app_repository: git@github.com:kainlite/tr.git
    gitops.operator.deployment_path: app/02-deployment.yaml
    gitops.operator.enabled: 'true'
    gitops.operator.image_name: ghcr.io/kainlite/tr
    gitops.operator.manifest_repository: git@github.com:kainlite/tr-manifests.git
    gitops.operator.namespace: tr
    gitops.operator.notifications_secret_name: webhook-secret
    gitops.operator.notifications_secret_namespace: gitops-operator
    gitops.operator.registry_secret_name: ghcr-creds
    gitops.operator.ssh_key_name: ssh-key
    gitops.operator.ssh_key_namespace: gitops-operator
  labels:
    app: tr
    name: tr
  name: tr-deployment
  namespace: tr
spec:
  replicas: 2
  selector:
    matchLabels:
      name: tr
  template:
    metadata:
      labels:
        app: tr
        name: tr
    spec:
      containers:
      - env:
        - name: POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: OLLAMA_ENDPOINT
          value: http://ollama.ollama.svc.cluster.local:11434/api
        - name: CONTACT_EMAIL
          value: blog@segfault.pw
        image: ghcr.io/kainlite/tr:e4b1099d0b5da5bbcff20ce7f48a6e57ca069474
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - /app/bin/tr eval "Tr.Release.migrate()"
        name: tr
        ports:
        - containerPort: 4000
        - containerPort: 4369
        securityContext:
          allowPrivilegeEscalation: false
      imagePullSecrets:
      - name: ghcr-creds
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
